// Copyright 2023 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package healthpb;

option go_package = "infra/cr_builder_health/healthpb";

import "google/protobuf/timestamp.proto";

message InputParams {
  google.protobuf.Timestamp date = 1;  // which date to generate health for
}
